# docling-api

./: PLAN.md  README.md  docling.db  docling_service.py  main.py  old_docling_service.py  pyproject.toml  todo.md
api/: routes.py
api/routes/: __init__.py  admin.py  auth.py  chat.py  chunks.py  collections.py  documents.py  extracted_images.py  health.py  history.py  images.py  search.py  tables.py  tags.py
core/: __init__.py  auth.py  cache.py  config.py  database.py  embeddings.py  error_handlers.py  jobs.py  llm.py  models.py  schemas.py  vector_store.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ResultDisplay.module.css  ResultDisplay.tsx
frontend/src/features/documents/: BulkProcessor.tsx  DocumentProcessor.module.css  DocumentProcessor.tsx  index.ts  use-documents.ts
frontend/src/features/health/: HealthCheck.module.css  HealthCheck.tsx  index.ts  use-health.ts
frontend/src/features/images/: ImageExtractor.tsx  index.ts  use-images.ts
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/lib/: api.ts  index.ts  query-client.ts  store.ts
frontend/src/pages/: BulkPage.tsx  DashboardPage.tsx  HistoryPage.tsx  ImagesPage.tsx  ProcessPage.tsx
services/: __init__.py  advanced_rag.py  chunking_service.py  docling_converter.py  docling_service.py  docling_streaming.py  file_utils.py  history_service.py  image_service.py  multimodal_service.py  rag_service.py
