[project]
name = "api-docs-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.66.0",
    "fastapi[standard]>=0.127.0",
    "pillow>=11.3.0",
    "python-multipart>=0.0.21",
    "ruff>=0.14.10",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.40.0",
]
